welcome.lessons.welcome.methods.picture.MethodsPictureLarge.scala.error
MethodsPictureLarge:45: error: illegal start of statement (no modifiers allowed here)
override def run() {
^